# Parser-for-job-sites

./: .gitignore  README.md  pyproject.toml
data/: vacancies.csv  vacancies.json  vacancies.txt  vacancies.xls
src/: UserInterface.py  VacancyStorage.py  main.py  utils.py
src/api/: ApiHandler.py  HhAPI.py  SuperJobAPI.py
src/models/: Vacancy.py
